--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/mappings.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/mappings.yml
@@ -11,7 +11,7 @@
       SquadDelta: CMHeadsetDelta
       SquadEcho: CMHeadsetEcho
       SquadFoxtrot: CMHeadsetFoxtrot
-      SquadQuebec: CMHeadsetQuebec
+      SquadQuebec: RMCHeadsetQuebec
 
 - type: entity
   id: CMVendorHeadsetSquadLeader
@@ -26,7 +26,7 @@
       SquadDelta: CMHeadsetDeltaLeader
       SquadEcho: CMHeadsetEchoLeader
       SquadFoxtrot: CMHeadsetFoxtrotLeader
-      SquadQuebec: CMHeadsetQuebecLeader
+      SquadQuebec: RMCHeadsetQuebecLeader
 
 - type: entity
   id: CMVendorHeadsetSquadFTL
@@ -41,7 +41,7 @@
       SquadDelta: CMHeadsetDeltaTeamLeader
       SquadEcho: CMHeadsetEchoTeamLeader
       SquadFoxtrot: CMHeadsetFoxtrotTeamLeader
-      SquadQuebec: CMHeadsetQuebecTeamLeader
+      SquadQuebec: RMCHeadsetQuebecTeamLeader
 
 - type: entity
   id: CMVendorHeadsetSquadComTech
@@ -56,7 +56,7 @@
       SquadDelta: CMHeadsetDeltaEngineer
       SquadEcho: CMHeadsetEchoEngineer
       SquadFoxtrot: CMHeadsetFoxtrotEngineer
-      SquadQuebec: CMHeadsetQuebecEngineer
+      SquadQuebec: RMCHeadsetQuebecEngineer
 
 - type: entity
   id: CMVendorHeadsetSquadCorpsman
@@ -71,4 +71,4 @@
       SquadDelta: CMHeadsetDeltaMedic
       SquadEcho: CMHeadsetEchoMedic
       SquadFoxtrot: CMHeadsetFoxtrotMedic
-      SquadQuebec: CMHeadsetQuebecMedic
+      SquadQuebec: RMCHeadsetQuebecMedic
