abandon flesh, embrace metal.

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/cm_base_gun.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/cm_base_gun.yml
@@ -60,4 +60,4 @@
   - type: RMCProjectileAccuracy
   - type: Projectile
     soundHit:
-     collection: RMCBallisticHit
+      path: /Audio/_RMC14/Bullets/bullet_impact1.ogg
