--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -154,6 +154,7 @@
     minimapBackground:
       sprite: _RMC14/Interface/map_blips.rsi
       state: background_quebec
+    canSupplyDrop: false
 
 - type: entity
   parent: SquadBase
