--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -46,6 +46,9 @@
       key_slots:
       - CMEncryptionKeyCommon
       - RMCEncryptionKeyLiaison
+  - type: GrantMarineIcons
+  - type: GrantSquadLeaderTracker
+  - type: GrantTacMapAlert
 
 # For Duke's Dozen/Freelancer
 - type: entity
