--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/medic.yml
@@ -47,7 +47,7 @@
   id: RMCSPPMedic
   components:
   - type: GhostRole
-    name: rmc-job-name-spp-medic
+    name: rmc-ghost-name-spp-medic
     description: rmc-job-description-spp-medic
     rules: rmc-ghost-role-information-spp-rules
     reregister: false
