--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -154,3 +154,20 @@
     leaderIcon:
       sprite: _RMC14/Interface/cm_job_icons.rsi
       state: upp_sl_a
+
+- type: entity
+  parent: SquadBase
+  id: SquadPMC
+  name: PMC
+  components:
+  - type: SquadTeam
+    color: "#C0C0C0"
+    radio: WEYA
+    minimapBackground:
+      sprite: _RMC14/Interface/map_blips.rsi
+      state: background_pmc
+    canSupplyDrop: false
+    group: PMC
+    leaderIcon:
+      sprite: _RMC14/Interface/cm_job_icons.rsi
+      state: pmc_ld
