--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/BoltAction/hunting_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/BoltAction/hunting_rifle.yml
@@ -1,5 +1,5 @@
 ﻿- type: entity
-  parent: [ RMCBaseBreechloader, RMCBaseAttachableHolder ]
+  parent: [ CMBaseWeaponRifle, RMCBaseAttachableHolder ]
   name: Basira-Armstrong bolt-action hunting rifle
   id: RMCWeaponBoltActionRifle
   description: Named after its eccentric designers, the Basira-Armstrong is a cheap but reliable civilian bolt-action rifle frequently found in the outer colonies. Despite its legally-mandated limited magazine capacity, its light weight and legendary accuracy makes it popular among hunters and competitive shooters.
@@ -42,9 +42,18 @@
   - type: MagazineAmmoProvider
     autoEject: false
     soundAutoEject: null
-  - type: ContainerContainer
-    containers:
-      gun_magazine: !type:ContainerSlot
+  # - type: ContainerContainer
+  #   containers:
+  #     gun_magazine: !type:ContainerSlot
+  #     gun_chamber: !type:ContainerSlot
+  #     ballistic-ammo: !type:Container
+  #       ents: []
+  - type: GenericVisualizer
+    visuals:
+      enum.BreechVisuals.Open:
+        enum.BreechVisuals.Open:
+          True: { state: bolt-open }
+          False: { state: base }
   - type: ItemSlots
     slots:
       gun_magazine:
