--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/fuel_tank_pouch.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/fuel_tank_pouch.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   parent: [RMCPouchOpenClosed, RMCPouchStorage]
   id: RMCPouchFuelTank
   name: fuel tank strap pouch
@@ -7,6 +7,7 @@
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Pouches/fueltank.rsi
   - type: Storage
+    maxItemSize: Normal
     grid:
     - 0,0,3,1 #2 slots
     whitelist:
