feat(yaml): add suffix to RMCPouchFuelTankExtinguisher prototype
It was indistinguishable in the entity menu.

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/fuel_tank_pouch.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/fuel_tank_pouch.yml
@@ -1,4 +1,4 @@
-- type: entity
+﻿- type: entity
   parent: [RMCPouchOpenClosed, RMCPouchStorage]
   id: RMCPouchFuelTank
   name: fuel tank strap pouch
@@ -26,6 +26,7 @@
 - type: entity
   parent: RMCPouchFuelTank
   id: RMCPouchFuelTankFilledExtinguisher
+  suffix: Extinguishers
   components:
   - type: StorageFill
     contents:
