--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
@@ -280,6 +280,25 @@
   components:
   - type: VictimBurst
 
+# Guidebook Colonist
+- type: entity
+  id: RMCGuidebookCorpseColonistBurst
+  parent: CMMobHuman
+  name: Dead Colonist
+  categories: [ DoNotMap, HideSpawnMenu ]
+  components:
+  - type: VictimBurst
+  - type: Loadout
+    prototypes: [ RMCGearCorpseColonist ]
+  - type: RandomHumanoidAppearance
+  - type: Damageable
+    damage:
+      types:
+        Bloodloss: 36
+        Asphyxiation: 44
+        Slash: 77
+        Blunt: 43
+
 # We-Ya Goon
 - type: randomHumanoidSettings
   parent: RMCCorpse
