--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Head/pmc.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Head/pmc.yml
@@ -127,3 +127,15 @@
     sprite: _RMC14/Objects/Clothing/Head/PMC/kutjevo_medical.rsi
   - type: Clothing
     sprite: _RMC14/Objects/Clothing/Head/PMC/kutjevo_medical.rsi
+
+- type: entity
+  parent: ArmorHelmetPMC
+  id: ArmorHelmetPMCEngineer
+  name: pmc engineer helmet
+  description: An advanced technician helmet with a black finish, including advanced welding protection and resistence to the potential industrial hazards, but has less kevlar against potential firefights.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Head/PMC/engineer.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Head/PMC/engineer.rsi
+  - type: EyeProtection
