--- a/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
@@ -465,3 +465,16 @@
     # - id: CMSplint5
     - id: CMFireExtinguisherPortable
     - id: CMHealthAnalyzer
+
+- type: entity
+  parent: CMWebbingBlack
+  id: RMCWebbingPMCAlt1
+  suffix: PMC, Alt1, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: CMMRE # TODO RMC14: PMC CFR ration
+    - id: RMCRangefinder
+    - id: RMCGrenadeBlastM12
+    - id: RMCTelescopicBaton
+    - id: RMCHandcuffs
