eclipse request + more iff fixes

--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
@@ -21,6 +21,8 @@
   components:
   - type: PresetIdCard
     job: CMSurvivor
+  - type: ItemIFF
+    faction: FactionSurvivor
 
 - type: entity
   parent: CMIDCardSilver
@@ -29,6 +31,8 @@
   components:
   - type: PresetIdCard
     job: CMSurvivorDoctor
+  - type: ItemIFF
+    faction: FactionSurvivor
 
 - type: entity
   parent: CMIDCardLanyard
@@ -37,6 +41,8 @@
   components:
   - type: PresetIdCard
     job: CMSurvivorEngineer
+  - type: ItemIFF
+    faction: FactionSurvivor
 
 - type: entity
   parent: CMIDCardLanyard
@@ -50,12 +56,16 @@
     sprite: _RMC14/Objects/CMIDs/id.rsi
   - type: PresetIdCard
     job: CMSurvivorSecurity
+  - type: ItemIFF
+    faction: FactionSurvivor
 
 - type: entity
   parent: CMIDCardSilver
   id: CMIDCardLiaison
   name: liaison ID card
   components:
+  - type: ItemIFF
+    faction: FactionWeYa
   - type: PresetIdCard
     job: CMLiaison
 
@@ -138,14 +148,15 @@
   description: A corporate holo-badge. It has a unique uncapped bottom.
   components:
   - type: ItemIFF
-    faction: FactionPMC
+    faction: FactionWeYa
 
 - type: entity
-  id: FactionPMC
+  id: FactionWeYa
   components:
   - type: IFFFaction
   - type: FactionFrequencies
     channels:
+    - Colony
     - WEYA
 
 - type: entity
