--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
@@ -18,7 +18,7 @@
     components:
     - type: NpcFactionMember
       factions:
-      - PMC
+      - WeYa
     - type: Skills
       skills:
         RMCSkillFirearms: 2
@@ -62,8 +62,8 @@
     - RMCExplosiveBreachingCharge
     - MetalFoamGrenade # TODO RMC14: This is upstream version
     back:
-    - RMCSentryMini
-    - RMCSentryMini
+    - RMCSentryMiniWeYa
+    - RMCSentryMiniWeYa
     - CMSheetMetal50
     - CMSandbagEmpty50
     - CMSheetPlasteel50
@@ -87,7 +87,7 @@
 - type: entity
   parent: MarkerBase
   id: RMCRandomHumanoidPMCEngineer
-  name: pmc ghost role engineer
+  name: weya pmc ghost role engineer
   suffix: Spawner, Player
   components:
   - type: Sprite
