--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
@@ -496,3 +496,13 @@
   - type: StorageFill
     contents:
     - id: CMMRE # TODO : Needs hacked MD and SPP sentry
+
+- type: entity
+  parent: CMSatchelMarineMedic
+  id: RMCSatchelPMCMedic
+  description: pmc medic combat pack
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Back/Satchels/PMC/medic.rsi
+  - type: ItemCamouflage
+    camouflageVariations: {}
