--- a/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
@@ -478,3 +478,16 @@
     - id: RMCGrenadeBlastM12
     - id: RMCTelescopicBaton
     - id: RMCHandcuffs
+
+- type: entity
+  parent: CMWebbingBlack
+  id: RMCWebbingPMCAlt2
+  suffix: PMC, Alt2, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: CMMRE # TODO RMC14: PMC CFR ration
+    - id: CMMRE # TODO RMC14: PMC CFR ration
+    - id: CMCrowbar # TODO RMC14: tactical prybar
+    - id: RMCGrenadeBlastM12
+    - id: RMCExplosivePlastic
