--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/storage.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/storage.yml
@@ -646,3 +646,32 @@
 #    grid:
 #    - 0,0,2,1 #3 slots
 #whitelist: # TODO RMC14 add cassettes
+
+# Drum Pouch
+- type: entity
+  parent: [RMCPouchOpenClosed, RMCPouchStorage]
+  id: RMCPouchDrumPMC
+  name: smartgun drum pouch
+  description: A heavy pouch designed for carrying a surplus of smargun drums.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Pouches/wy_sgdrums_ammo.rsi
+  - type: Storage
+    maxItemSize: Normal
+    grid:
+    - 0,0,5,1 #3 slots
+    whitelist:
+      tags:
+      - RMCMagazineSmartGun
+      - RMCMagazineSmartGunirradiated
+  - type: FixedItemSizeStorage
+
+- type: entity
+  parent: RMCPouchDrumPMC
+  id: RMCPouchDrumPMCFill
+  suffix: Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCMagazineSmartGunirradiated
+      amount: 3
