--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_egg.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_egg.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   parent: BaseItem
   id: XenoEgg
   name: egg
@@ -52,11 +52,6 @@
         !type:DamageTrigger
         damage: 80
       behaviors:
-      - !type:SpawnEntitiesBehavior
-        spawn:
-          XenoEggDestroyed:
-            min: 1
-            max: 1
       - !type:PlaySoundBehavior
         sound:
           path: /Audio/_RMC14/Xeno/alien_egg_burst.ogg
@@ -149,3 +144,21 @@
   - type: RequireProjectileTarget
   - type: WhitelistPickupBy
   - type: DestroyedXenoEgg
+
+- type: entity
+  parent: XenoEggDestroyed
+  categories: [ HideSpawnMenu ]
+  id: XenoEggDestroyedFragile
+  name: fragile egg
+  components:
+  - type: Sprite
+    sprite: _RMC14/Structures/Xenos/xeno_egg_fragile.rsi
+
+- type: entity
+  parent: XenoEggDestroyed
+  categories: [ HideSpawnMenu ]
+  id: XenoEggDestroyedFragileSustained
+  name: fragile egg
+  components:
+  - type: Sprite
+    sprite: _RMC14/Structures/Xenos/xeno_egg_fragile.rsi
