--- a/Resources/Prototypes/_RMC14/Effects/attack.yml
+++ b/Resources/Prototypes/_RMC14/Effects/attack.yml
@@ -32,3 +32,20 @@
   - type: Tag
     tags:
     - HideContextMenu
+
+- type: entity
+  parent: RMCBaseEffect
+  id: RMCEffectHeadbite
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: TimedDespawn
+    lifetime: 0.4
+  - type: Sprite
+    sprite: _RMC14/Effects/attacks.rsi
+    noRot: true
+    state: headbite
+    drawdepth: Effects
+  - type: EffectVisuals
+  - type: Tag
+    tags:
+    - HideContextMenu
