--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/lurker.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/lurker.yml
@@ -53,18 +53,6 @@
     max: 500
     evolvesTo:
     - CMXenoRavager
-    strains:
-    - RMCXenoLurkerVampire
-  - type: XenoLeap
-    plasmaCost: 20
-    delay: 0
-    moveDelayTime: 1.5
-    knockdownTime: 5
-    leapSound: /Audio/_RMC14/Xeno/alien_pounce.ogg
-    knockdownRequiresInvisibility: true
-    unrootOnMelee: true
-  - type: XenoTurnInvisible
-  - type: XenoCripplingStrike
   - type: XenoMeleeSlow
     requiresKnockDown: true
   - type: XenoClaws
@@ -108,20 +96,8 @@
   - CMXenoTail
   - RMCXenoLurkerBase
   id: CMXenoLurker
-  name: Lurker
-  description: A beefy, fast alien with sharp claws.
+  suffix: Base
   components:
-  - type: Xeno
-    role: CMXenoLurker
-    actionIds:
-    - ActionXenoRest
-    - ActionXenoRegurgitate
-    - ActionXenoWatch
-    - ActionXenoTailStab
-    - ActionXenoPounce
-    - ActionXenoTurnInvisible
-    - ActionXenoCripplingStrike
-    - ActionXenoDevolve
   - type: XenoLeap
     plasmaCost: 20
     delay: 0
@@ -132,29 +108,31 @@
     unrootOnMelee: true
   - type: XenoTurnInvisible
   - type: XenoCripplingStrike
-  - type: XenoMeleeSlow
-    requiresKnockDown: true
   - type: XenoTailStab
     tailDamage:
       groups:
         Brute: 42
+  - type: XenoEvolution
+    strains:
+    - RMCXenoLurkerVampire
 
 - type: entity
   parent: RMCXenoLurkerBase
   id: RMCXenoLurkerVampire
-  name: Lurker
-  description: A beefy, fast alien with sharp claws.
   suffix: Vampire
   components:
+  - type: Sprite
+    sprite: _RMC14/Mobs/Xenonids/Lurker/vampire_lurker.rsi
   - type: Xeno
     role: CMXenoLurker
     actionIds:
     - ActionXenoRest
     - ActionXenoRegurgitate
     - ActionXenoWatch
-    - ActionXenoPounce
-    - ActionXenoTurnInvisible
-    - ActionXenoCripplingStrike
+    - ActionXenoRush
+    - ActionXenoFlurry
+    - ActionXenoTailJab
+    - ActionXenoHeadbite
     - ActionXenoDevolve
     hidden: true
   - type: MobThresholds
@@ -166,12 +144,30 @@
     delay: 0
     range: 4
     moveDelayTime: 0
-    knockdownTime: 5
-    leapSound: null
-  - type: XenoMeleeSlow
-    requiresKnockDown: true
+    knockdownTime: 0
+    leapSound: /Audio/Weapons/Xeno/alien_claw_flesh3.ogg
+    hitEffect: RMCEffectExtraSlash
+    targetJitterTime: 1
+    targetCameraShakeStrength: 1
+    damage:
+      groups:
+        Brute: 40
+  - type: XenoTailJab
+    attackEffect: RMCEffectTailHit
+    throwRange: 0.5
+    damage:
+      groups:
+        Brute: 35
+  - type: XenoFlurry
+    damage:
+      groups:
+        Brute: 35
+  - type: XenoHeadbite
+    damage:
+      groups:
+        Brute: 60
   - type: MeleeWeapon
-    attackRate: 0.9
+    attackRate: 0.93
     damage:
       groups:
         Brute: 30
