--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/fuel_tank_pouch.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/fuel_tank_pouch.yml
@@ -26,7 +26,7 @@
 - type: entity
   parent: RMCPouchFuelTank
   id: RMCPouchFuelTankFilledExtinguisher
-  suffix: Extinguishers
+  suffix: Filled, Extinguishers
   components:
   - type: StorageFill
     contents:
