--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
@@ -297,7 +297,7 @@
     back: CMBackpackMarine
     gloves: RMCHandsVeteran
     shoes: RMCBootsCorporate
-    id: RMCIDCardPMCColony
+    id: RMCIDCardPMC
     ears: CMHeadsetColony
     pocket1: RMCPouchFirstAidInjectors
   storage:
