--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/standard.yml
@@ -71,10 +71,10 @@
     shoes: RMCBootsPMCFilled
     mask: RMCMaskBalaclava # TODO RMC14: M8 pattern armored balaclava
     ears: RMCHeadsetDistressPMC
-    back: RMCSatchelLightpack
+    back: RMCSatchelLightpack # TODO RMC14: PMC combat backpack
     belt: CMM77BeltFilled
-    pocket1: RMCPouchFirstAidInjectors
-    pocket2: RMCPouchMagazineLarge
+    pocket1: RMCPouchFirstAidPMCFill
+    pocket2: RMCPouchMagazineLarge # TODO RMC14: PMC re-sprite
     suitstorage: RMCWeaponSMGM63B2
   inhand:
   - RMCWebbingPMC
@@ -143,10 +143,10 @@
     shoes: RMCBootsPMCFilled
     mask: RMCMaskBalaclava # TODO RMC14: M8 pattern armored balaclava
     ears: RMCHeadsetDistressPMC
-    back: RMCSatchelLightpack
+    back: RMCSatchelLightpack # TODO RMC14: PMC combat backpack
     belt: CMM77BeltFilled
-    pocket1: RMCPouchFirstAidInjectors
-    pocket2: RMCPouchMagazineLarge
+    pocket1: RMCPouchFirstAidPMCFill
+    pocket2: RMCPouchMagazineLarge # TODO RMC14: PMC re-sprite
     suitstorage: WeaponRifleSSG45
   inhand:
   - RMCWebbingPMC
@@ -213,10 +213,10 @@
     shoes: RMCBootsPMCFilled
     mask: RMCMaskBalaclava # TODO RMC14: M8 pattern armored balaclava
     ears: RMCHeadsetDistressPMC
-    back: RMCSatchelLightpack
+    back: RMCSatchelLightpack # TODO RMC14: PMC combat backpack
     belt: CMM77BeltFilled
-    pocket1: RMCPouchFirstAidInjectors
-    pocket2: RMCPouchMagazineLarge
+    pocket1: RMCPouchFirstAidPMCFill
+    pocket2: RMCPouchMagazineLarge # TODO RMC14: PMC re-sprite
     suitstorage: RMCWeaponRifleM54C2
   inhand:
   - RMCWebbingPMC
