--- a/Resources/Prototypes/_RMC14/weather.yml
+++ b/Resources/Prototypes/_RMC14/weather.yml
@@ -86,6 +86,7 @@
   sprite:
     sprite: /Textures/_RMC14/Effects/weather.rsi
     state: hybrisa_rain
+    color: "#ffffff28"
   sound:
     collection: Rain
     params:
