--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/pmc.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/pmc.yml
@@ -173,3 +173,21 @@
   - type: ClothingSpeedModifier # SLOWDOWN_ARMOR_LIGHT
     walkModifier: 0.725
     sprintModifier: 0.725
+
+- type: entity
+  parent: RMCBaseJacket
+  id: RMCArmorPMCDirector
+  name: director's jacket
+  description: A jacket that belongs to someone very important. It is made of insulating material and offers minor protection from all forms of damage.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/OuterClothing/PMC/director.rsi
+  # TODO RMC14: Taser immunity?
+  - type: CMArmor
+    melee: 15 # CLOTHING_ARMOR_MEDIUMLOW
+    bullet: 20 # CLOTHING_ARMOR_MEDIUM
+    bio: 20 # CLOTHING_ARMOR_MEDIUM
+    explosionArmor: 20 # CLOTHING_ARMOR_MEDIUM
+  - type: Storage
+    grid:
+    - 0,0,5,1 # 3 slots
