--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
@@ -269,7 +269,7 @@
 - type: entity
   parent: RMCSentryMini
   id: RMCSentryMiniWeYa
-  name: WeYa 512-M mini sentry
+  name: We-Ya 512-M mini sentry
   description: A compact version of the UNMC defenses. Designed for quick deployment of the associated type in the field. This one has been modified for use by the mercenaries employed by Weston-Yamada.
   components:
   - type: NpcFactionMember
