--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/sniper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/sniper.yml
@@ -31,6 +31,7 @@
         RMCSkillMeleeWeapons: 1
         RMCSkillEndurance: 3
         RMCSkillJtac: 1
+    - type: SniperWhitelist
     - type: SquadArmorWearer
 
 - type: startingGear
